# tinyev

./: README.md  build.sh  meson.build  meson_options.txt
include/: error.h  log.h  tests.h  tinyev.h
src/: log.c  tinyev.c
tests/: main.c  test_client.c  test_server.c
